# magic-sql-gen

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  run-serve.sh  styles.css  unocss.config.js
.github/workflows/: deploy.yml
src/: app.rs  generate_sql.rs  main.rs
src/components/: generator_picker.rs  mod.rs  sql_column_info.rs
src/magicdraw_parser/: ddl_parser.rs  mod.rs  sql_types_parser.rs  uml_model_parser.rs  utils.rs
